force-app/main/default/objects/Volunteer__c/fields/Favourite_Puppy__c.field-meta.xml
<CustomField>
    <fullName>Favourite_Puppy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Favourite Puppy</label>
    <referenceTo>Puppy__c</referenceTo>
    <relationshipLabel>Favourite Volunteers</relationshipLabel>
    <relationshipName>Favourite_Volunteers</relationshipName>
    <type>Lookup</type>
</CustomField>