force-app/main/default/objects/Volunteer__c/fields/Number_of_Hours_per_Week__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours_per_Week__c</fullName>
    <label>Number of Hours per Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>