force-app/main/default/objects/Volunteer__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supervisor?</label>
    <type>Checkbox</type>
</CustomField>