force-app/main/default/objects/Volunteer__c/validationRules/PuppyAlwaysFailDemoRule.validationRule-meta.xml
<ValidationRule>
    <fullName>PuppyAlwaysFailDemoRule</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK(CreatedById))</errorConditionFormula>
    <errorMessage>This error message will always appear!</errorMessage>
</ValidationRule>